# dev-sync-ai

./: CLAUDE.md  README.md  project.txt  spec.md
backend/: config.py  db.py  main.py  pyproject.toml  schemas.py
backend/agent/: orchestrator.py  tools.py
backend/integrations/: github.py  linear.py  notion.py  slack.py
backend/routers/: reports.py  sync.py  webhooks.py
frontend/: package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260318174221_add_app_models/: migration.sql
frontend/public/images/stitch_devsync_ai_sign_in/: code.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/sign-in/: page.tsx
frontend/src/app/(auth)/sign-up/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(root)/: layout.tsx  page.tsx
frontend/src/app/check/: page.tsx
frontend/src/components/: auth-form.tsx  footer.tsx  navbar.tsx
frontend/src/components/dashboard/: header.tsx  side-bar.tsx
frontend/src/components/sections/: bento-grid.tsx  cta.tsx  features.tsx  hero-section.tsx  logo-strip.tsx  pricing.tsx
frontend/src/constants/: index.ts
frontend/src/database/: schema.ts
frontend/src/schema/: auth-form-schema.ts
frontend/src/trpc/: init.ts  server.tsx
frontend/src/trpc/routers/: _app.ts  agent-router.ts  integrations-router.ts  projects-router.ts  reports-router.ts  sync-events-router.ts  user-router.ts
frontend/src/utils/: auth-client.ts  auth.ts  prisma.ts
(+9 files in other folders)
